# ppinot4py

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements-dev.txt  setup.py  test.py  timeTest.py
.github/workflows/: python-tests.yml
PPINot4Py/: Type.py  __init__.py  computer.py  countMeasureComputerTest.py  dataMeasureComputer.py  import.py  importBase.py  timeGrouper.py  timeMeasureComputerTest.py
PPINot4Py/computerTesting/: aggregatedMeasureComputerTest.py  countMeasureComputerTest.py  dataMeasureComputerTest.py  timeMeasureComputerTest.py
PPINot4Py/computers/: __init__.py  aggregatedComputer.py  conditions_computer.py  countComputer.py  dataComputer.py  derivedComputer.py  metrics_computer.py  timeComputer.py  timeComputerCopycopy.py  timeComputerGeneric.py
PPINot4Py/condition/: Condition.py  DataPropertyCondition.py  ProcessInstanceCondition.py  __init__.py  conditionChooser.py
PPINot4Py/functionsFrame/: __init__.py  auxFunctions.py  baseMeasures.py  measuresDefinitionAux.py
PPINot4Py/latexDocuments/: example.aux  example.tex
PPINot4Py/measures/: __init__.py  base.py
PPINot4Py/model/: __init__.py  conditions.py  measures.py  states.py
PPINot4Py/state/: ComplexState.py  DataObjectState.py  RunTimeState.py  __init__.py
PPINot4Py/testing/: countMeasureComputerTest.py  dataMeasureComputer.py  derivedMeasureComputerTest.py  unitTest.py  (+1 more)
model/: MeasureDefinition.py  dataframeFilter.py  jsonTest.json  ltlchecker.py  measureComputer.py  personalTest.py  test.py  timeGrouper.py  timeTest.py  trash.py  unitTest.py
ppinot4py/: __init__.py
(+37 files in other folders)
