[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppinot4py"
version = "1.2.4"
description = "PPINOT for Python (ppinot4py)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "ISA Group", email = "resinas@us.es" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  "pandas",
  "numpy",
  "business-duration"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8",
  "holidays"
]

[project.urls]
Homepage = "https://github.com/isa-group/ppinot4py"

[tool.setuptools.packages.find]
include = ["ppinot4py*"]
